Bug 58778 - FORMATTING: conditional formats can easily be created without a specified range (especially iconset)
Summary: FORMATTING: conditional formats can easily be created without a specified ran...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta2
Hardware: Other Windows (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.1.0 target:4.0.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-26 10:45 UTC by john.pratt
Modified: 2013-01-22 12:10 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description john.pratt 2012-12-26 10:45:26 UTC
Problem: when creating a conditional format using CF->manage->add the range box does not automatically contain any range and there is nothing to highlight that this is missing, so conditional formats can easily be created which do not have a range.

Steps to reproduce:
1. select: formatting->conditional formatting->manage->add
2. define the format in the box marked 'condition 1'
3. click 'OK'

Current behaviour: the dialogue closes and a conditional format is listed in the manage window without a range; clearly this format cannot be used

Expected behaviour: a popup should appear to ask if you really want to save the conditional format without a range (or should it simply not be allowed to create a conditional format without a range), or the range field should be highlighted in red whenever it is blank or has an invalid entry to draw attention to it.

Partial alternative: I would be a lot less likely to do this if iconset appeared on the list under formatting->conditional formatting, as the main reason I use the add button on the manage window is to create an iconset, as there is no menu item for these.

Another alternative: pre-fill the range box with the current selected cells (but would this be a hindrance to some users)?  It would be good for me, but think this might any others!
Comment 1 Markus Mohrhard 2013-01-13 06:45:24 UTC
I can't implement the pop-up for 4.0 as we are past string freeze now. However we can implement the highlighting of the edit field.

I'll implement that no conditional formats without range can be created. They will be removed anyway automatically later during the first call to ScConditionalFormat::UpdateReference.

That icon-sets are not in the menu is just because I forgot to add them. I'll add them for 4.1. The menu structure was my least priority as I was working on some internal problems with the conditional formats dialogs until the feature freeze.
Comment 2 Not Assigned 2013-01-18 13:51:13 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=16d50ae144d4ddd86177bd35ddd0b79529fbf79e

add all the new conditional formats to the menu, related fdo#58778



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Not Assigned 2013-01-19 08:15:04 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e2170dd77ffbeda24aabb2b704deedd4440d7620

prevent to create cond formats with empty range, fdo#58778



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Not Assigned 2013-01-21 18:10:43 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d820394160f7448c17934d9d6fabb17263ce2696&h=libreoffice-4-0

prevent to create cond formats with empty range, fdo#58778


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.