add all the new conditional formats to the menu, related fdo#58778

Change-Id: I398fac5c585b5ea6e40331b50119c90c180a32bc